<resources xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">
    <!--<string name="app_name">Pe_saas</string>-->
    <!--<string name="app_name">海通创新</string>-->
    <string name="get_code">点击获取</string>
    <string name="get_code_disable">剩余%s秒</string>
    <string name="tv_update_time">更新时间:%s</string>
    <string name="tv_project_cangu_relation" formatted="false" >参股关系：&lt;font color="#666666"> %s &lt;/font></string>
    <string name="tv_project_cangu_percent" formatted="false">参股比例(%%)：&lt;font color="#666666"> %s &lt;/font></string>
    <string name="tv_project_cangu_touzijine" formatted="false">投资金额(万元)：&lt;font color="#666666"> %s &lt;/font></string>
    <string name="tv_project_cangu_jinlirun" formatted="false">被参股公司净利润(元)：&lt;font color="#666666"> %s &lt;/font></string>
    <string name="tv_project_cangu_is_merge" formatted="false">是否报表合并：&lt;font color="#666666"> %s &lt;/font></string>
    <string name="tv_project_cangu_bis" formatted="false">被参股公司主营业务：&lt;font color="#666666"> %s &lt;/font></string>
    <string name="tv_proj_product_type">类型：</string>
    <string name="tv_proj_product_desc">描述：</string>
    <string name="tv_proj_product_biz">业务：</string>
    <string name="tv_proj_product_create_date">成立日期：</string>
    <string name="tv_proj_finance_lunci">投资轮次：</string>
    <string name="tv_proj_app_brif" formatted="false">描述：%s</string>
    <string name="tv_proj_product_company" formatted="false">关联公司：&lt;font color="#5785f3"> %s &lt;/font></string>
    <string name="tv_pairs_value" formatted="false">&lt;font color="#999999"> %s &lt;/font></string>
    <string name="tv_title_result_project" formatted="false">匹配到&lt;font color="#ff3300">%d&lt;/font>家公司: </string>
    <string name="tv_title_result_news" formatted="false">匹配到&lt;font color="#ff3300">%d&lt;/font>条资讯: </string>
    <string name="tv_title_result_search" formatted="false">匹配到&lt;font color="#ff3300">%d&lt;/font>条结果: </string>
    <string name="tv_title_result_search1" formatted="false">搜索到&lt;font color="#ff3300">%d条&lt;/font>相关文书: </string>
    <string name="tv_title_result_search2" formatted="false">&lt;font color="#3C98E8">%d&lt;/font>  条结果</string>
    <string-array name="Language">
        <item>汉语</item>
        <item>英语</item>
        <item>德语</item>
        <item>法语</item>
        <item>俄语</item>
        <item>西班牙语</item>
        <item>日语</item>
    </string-array>
    <string-array name="Education">
        <item>高中</item>
        <item>本科</item>
        <item>硕士</item>
        <item>MBA</item>
        <item>博士</item>
    </string-array>

    <string-array name="job">
        <item>董事长</item>
        <item>总经理</item>
        <item>财务总监</item>
        <item>董秘</item>
        <item>其他</item>
    </string-array>

    <string-array name="workers">
        <item>少于50人</item>
        <item>50–150人</item>
        <item>150–500人</item>
        <item>500–1000人</item>
        <item>1000–5000人</item>
        <item>5000–10000人</item>
        <item>10000人以上</item>
    </string-array>
    <string-array name="BusinessNature">
        <item>国有企业</item>
        <item>外资企业</item>
        <item>集体企业</item>
        <item>私营企业</item>
    </string-array>

    <string-array name="spinner">
        <item>全部</item>
        <item>投资部</item>
        <item>风控部</item>
    </string-array>

    <string-array name="spinner_this">
        <item>全部事务</item>
        <item>项目事务</item>
        <item>个人事务</item>
    </string-array>

    <string-array name="spinner_select_file">
        <item>常用应用</item>
        <item>内部存储</item>
    </string-array>

    <string-array name="remind_times">
        <item>提前5分钟</item>
        <item>提前15分钟</item>
        <item>提前30分钟</item>
        <item>提前1小时</item>
        <item>提前1天</item>
    </string-array>
    <string-array name="register_organ_scale">
        <item>少于10人</item>
        <item>10～30人</item>
        <item>30～50人</item>
        <item>50～100人</item>
        <item>100人以上</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_add_minus">如无,请填写\"无\"</string>
    <string name="unknown_error">暂时无可用数据</string>

    <!-- session -->
    <string name="input_panel_guess">猜 拳</string>
    <string name="input_panel_audio_call">语音通话</string>
    <string name="input_panel_video_call">视频通话</string>
    <string name="input_panel_file">发送文件</string>
    <string name="input_panel_RTS">白 板</string>
    <string name="input_panel_snapchat">阅后即焚</string>
    <string name="input_panel_tip">Tip</string>
    <string name="message_history_query">云消息记录</string>
    <string name="message_search_title">搜索本地消息记录</string>
    <string name="message_clear">清空本地消息记录</string>
    <string name="message_info">聊天信息</string>
    <string name="start_session_record">我发起了白板演示</string>
    <string name="session_end_record">白板演示已结束</string>
    <string name="location_map">地图定位</string>
    <string name="location_loading">正在定位</string>
    <string name="my_location">我的位置</string>
    <string name="location_address_unkown">该位置信息暂无</string>
    <string name="location_navigate">导航</string>
    <string name="format_mylocation">我的位置：%s</string>
    <string name="location_address_fail">获取位置信息失败</string>
    <string name="tools_selected">选择工具</string>
    <string name="friends_map_navigation_web">在网页中打开</string>
    <string name="file_help">好友通过微信/QQ发送过来的文件，必须先在微信/QQ中将文件打开（将文件下载到手机上），才能在此处被发现</string>
    <string name="approval_comments">审批意见</string>
    <string name="approval_input_hint">请输入审批意见（选填）</string>
    <string name="vote">否 决</string>
    <string name="confirm">确 认</string>
    <string name="cancel">取 消</string>
    <string name="update_title">当前版本过低</string>
    <string name="update_info">请立即升级到最新版</string>
    <string name="update_now">立刻升级</string>
    <string name="work_edit_hint">请输入事由…</string>
    <string name="people_attending">出席人</string>
    <string name="people_participate">参加人</string>
    <string name="arrange_address">地址</string>
    <string name="address_edit_hint">请输入地址</string>
    <string name="next_step">下一步</string>
    <string name="phone_input">输入手机号</string>
    <string name="vercode_input">输入验证码</string>
    <string name="join_team">输入邀请码</string>
    <string name="join_now">立即加入</string>
    <!--<string name="jump_link"><![CDATA[还没团队?立刻创建团队>>]]></string>-->
    <string name="jump_link">还没团队? 立刻创建团队>></string>
    <string name="tips1">本产品只面向私募机构开放，因此我们需要对您提供的名片进行审核,感谢合作!</string>
    <string name="tips_under_review">审核预计需要2个工作日，我们会短信通知您结果，请耐心等待</string>
    <string name="about_xpe">关于XPE</string>
    <string name="check_update">检查新版本</string>
    <string name="declare">免责声明</string>
    <string name="safe">XPE安全白皮书</string>
    <string name="notif_setting">新消息通知设置</string>
    <string name="notif_warn">注：当PE在后台运行时，部分华为手机（例如：荣耀）存在不能接收新消息通知的问题</string>
    <string name="notif_content">1、进入"系统设置"，点击"全部设置"；\n2、点击"受保护的后台应用"；\n3、将"PE"设置为受保护。</string>
    <string name="pl_assis">尽调助手</string>
    <string name="pl_title2"><![CDATA[关于修改<中国证券监督管理委员会上市公司并购重组审核委员会工作规程>的决定》]]></string>
    <string name="please_edit">请填写</string>
    <string name="project_name">标的公司名称</string>
    <string name="business_brief">业务简介</string>
    <string name="project_manager">项目经理</string>
    <string name="project_leader">项目负责人</string>
    <string name="create">创建</string>
    <string name="add_contact">+添加联系人</string>
    <string name="add_file">+添加文件</string>
    <string name="add_fund">+添加关联基金</string>
    <string name="pro_contact">标的公司联系人</string>
    <string name="project_info">信息填写</string>
    <string name="project_build">立项申请</string>
    <string name="project_info_title">两年一期的净利润、资产总额、净资产指标</string>
    <string name="submit">提交</string>
    <string name="refuse">退回修改</string>
    <string name="agree">同意通过</string>
    <string name="agree_lxh">同意上立项会</string>
    <string name="approve_agree">审批意见(选填)</string>
    <string name="upload_title">上传文件(选填)</string>
    <string name="person_account">个人账户余额</string>
    <string name="busi_account">企业账户余额</string>
    <string name="mine_order">我的订单</string>
    <string name="open_bill">开发票</string>
    <string name="bill_his">开票历史</string>
    <string name="bill_header">发票抬头管理</string>
    <string name="electron_tips">电子发票与纸质发票具有同等法律效力，可支持报销入账</string>
    <string name="paper_tips">电子发票与纸质发票具有同等法律效力，可支持报销入账，推荐 使用电子发票</string>
    <string name="bind_info">绑定微信并关注“搜股XPE助手”微信号，开启微信通知，重要消息不再错过</string>
    <string name="pager_bill">纸质发票\n预计5天内送达</string>
    <string name="electron_bill">电子发票\n最快5分钟开具</string>
</resources>
