<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/white_toolbar" />

    <TextView
        android:id="@+id/infoSupplementTitle"
        style="@style/registerTitleStyle"
        android:text="@string/join_team"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/toCreateTeam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:text="@string/jump_link"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintStart_toStartOf="@+id/infoSupplementTitle"
        app:layout_constraintTop_toBottomOf="@+id/infoSupplementTitle" />

    <com.sogukj.pe.baselibrary.widgets.SingleEditLayout
        android:id="@+id/invCodeLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="27dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="100dp"
        app:editCount="6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toCreateTeam"
        app:singleWidth="40">

    </com.sogukj.pe.baselibrary.widgets.SingleEditLayout>

    <TextView
        android:id="@+id/joinNow"
        style="@style/registerNextStep"
        android:enabled="false"
        android:text="@string/join_now"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/invCodeLayout" />

</android.support.constraint.ConstraintLayout>