<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/input_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:background="@drawable/approve_bg">

    <TextView
        android:id="@+id/approval_comments_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/approval_comments"
        android:textColor="@color/text_1"
        android:textSize="18sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/approval_comments_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/approval_comments_title"
        android:layout_marginTop="20dp"
        android:background="@drawable/approval_input_bg"
        android:gravity="top"
        android:hint="@string/approval_input_hint"
        android:lines="5"
        android:textColor="@color/text_1"
        android:textSize="16sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/approval_comments_input"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/veto_comment"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:background="@drawable/bg_border_blue1"
            android:gravity="center"
            android:text="@string/vote"
            android:textColor="@color/approve_blue1"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/confirm_comment"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:background="@drawable/bg_btn_blue1"
            android:gravity="center"
            android:text="同 意"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </LinearLayout>


</RelativeLayout>