<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/selector_phone"
    android:layout_marginLeft="@dimen/text_25"
    android:layout_marginRight="@dimen/text_25">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black_28"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/text_10"
        android:textSize="@dimen/text_size_18"
        android:text="@string/notif_setting"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_14"
        android:layout_marginLeft="@dimen/text_15"
        android:layout_marginRight="@dimen/text_15"
        android:layout_marginTop="@dimen/text_15"
        android:textColor="@color/gray_80"
        android:textStyle="italic"
        android:text="@string/notif_warn"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="@dimen/text_5"
        android:layout_marginLeft="@dimen/text_25"
        android:textColor="@color/gray_80"
        android:textSize="@dimen/text_size_16"
        android:layout_marginTop="@dimen/text_15"
        android:text="@string/notif_content"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_0.5"
        android:layout_marginTop="@dimen/text_8"
        android:background="@color/gray_f1"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="查看详情"
            android:textSize="@dimen/text_18"
            android:gravity="center"
            android:paddingTop="@dimen/text_15"
            android:paddingBottom="@dimen/text_15"
            android:textColor="@color/blue_43"/>
        <View
            android:layout_width="@dimen/text_0.5"
            android:layout_height="match_parent"
            android:background="@color/gray_f1"/>
        <TextView
            android:id="@+id/tv_close"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="我知道了"
            android:textSize="@dimen/text_18"
            android:gravity="center"
            android:paddingTop="@dimen/text_15"
            android:paddingBottom="@dimen/text_15"
            android:textColor="@color/blue_43"/>
    </LinearLayout>
</LinearLayout>