<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/divider_bottom2"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <ImageView
            android:id="@+id/iv_user"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:src="@drawable/img_logo_user" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_product"
                    style="@style/SoguTextNormal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:text="--"
                    tools:text="搜股(北京)" />

                <TextView
                    android:id="@+id/tv_round"
                    style="@style/SoguTextSamll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/bg_border_blue"
                    android:gravity="center"
                    android:visibility="gone" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_yewu"
                style="@style/SoguTextMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/tv_proj_product_biz" />

            <TextView
                android:id="@+id/tv_date"
                style="@style/SoguTextMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/tv_proj_product_create_date" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="5dp"
        android:background="@color/divider" />

    <TextView android:id="@+id/tv_company"
        style="@style/SoguTextSamll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_proj_product_company"
        android:drawablePadding="5dp"
        android:padding="5dp"
        android:text="@string/tv_proj_product_company" />

</LinearLayout>
