<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingBottom="@dimen/text_10"
    android:paddingLeft="@dimen/text_15"
    android:layout_marginLeft="@dimen/text_25"
    android:layout_marginRight="@dimen/text_25"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_agree_build">
    <ImageView
        android:id="@+id/iv_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/text_10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/icon_delete_file"/>

    <TextView
        android:id="@+id/tv_agree_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_14"
        android:textColor="@color/black_28"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/text_25"
        android:text="@string/approve_agree"/>
    
    <EditText
        android:id="@+id/ed_agree"
        android:layout_width="0dp"
        android:layout_height="30dp"
        app:layout_constraintStart_toStartOf="@+id/tv_agree_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_agree_title"
        android:layout_marginEnd="@dimen/text_20"
        android:maxLines="1"
        android:singleLine="true"
        android:textColor="@color/black_28"
        android:paddingLeft="@dimen/text_8"
        android:textSize="@dimen/text_size_14"
        android:background="@drawable/bg_edit_agree"
        android:layout_marginTop="@dimen/text_10"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_upload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_14"
        app:layout_constraintTop_toBottomOf="@+id/ed_agree"
        android:layout_marginTop="@dimen/text_10"
        android:textColor="@color/black_28"
        android:text="@string/upload_title"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/text_10"
        tools:listitem="@layout/item_upload_file"
        android:layout_marginBottom="@dimen/text_10"
        app:layout_constraintTop_toBottomOf="@+id/tv_upload"
        app:layout_constraintBottom_toTopOf="@+id/tv_add_file"
        app:layout_constraintEnd_toEndOf="@+id/ed_agree"/>

    <TextView
        android:id="@+id/tv_add_file"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/gray_a0"
        android:paddingLeft="@dimen/text_20"
        android:paddingRight="@dimen/text_20"
        android:paddingTop="@dimen/text_10"
        android:paddingBottom="@dimen/text_10"
        android:textSize="@dimen/text_size_14"
        android:background="@drawable/bg_add_contact"
        app:layout_constraintBottom_toTopOf="@+id/tv_cancel"
        app:layout_constraintStart_toStartOf="@+id/ed_agree"
        android:layout_marginBottom="@dimen/text_20"
        app:layout_constraintEnd_toEndOf="@+id/ed_agree"
        android:text="@string/add_file"/>

    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="0dp"
        android:layout_height="@dimen/text_45"
        android:background="@drawable/bg_cancel"
        android:gravity="center"
        android:textColor="@color/blue_17"
        app:layout_constraintVertical_weight="1"
        android:layout_marginEnd="@dimen/text_7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_agree"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="取消"/>

    <TextView
        android:id="@+id/tv_agree"
        android:layout_width="0dp"
        android:layout_height="@dimen/text_45"
        android:text="同意通过"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_marginStart="@dimen/text_7"
        app:layout_constraintVertical_weight="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_cancel"
        android:layout_marginEnd="@dimen/text_15"
        android:background="@drawable/bg_agree"/>
</android.support.constraint.ConstraintLayout>